[gd_scene load_steps=3 format=3 uid="uid://djp7plyxr7btb"]

[ext_resource type="Script" path="res://scenes_scripts/sociogramme.gd" id="1_qyjfd"]
[ext_resource type="Script" path="res://scenes_scripts/listes_binomes.gd" id="2_kjlny"]

[node name="Sociogramme" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyjfd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ListesBinomes" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("2_kjlny")

[node name="GenererBinomes" type="Button" parent="HBoxContainer/MarginContainer/ListesBinomes"]
layout_mode = 2
size_flags_horizontal = 4
text = "O21_G_BINOMES"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/ListesBinomes"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer/ListesBinomes/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="GroupesNegatifs" type="Label" parent="HBoxContainer/MarginContainer/ListesBinomes/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "O22_EVITER"

[node name="ScrollContainer2" type="ScrollContainer" parent="HBoxContainer/MarginContainer/ListesBinomes/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="GroupesPositifs" type="Label" parent="HBoxContainer/MarginContainer/ListesBinomes/HBoxContainer/ScrollContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "O22_FAVORISER"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 200

[node name="Tracer" type="Button" parent="HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "O23_TOOLTIP"
text = "O23_G_SOCIO"

[node name="ExporteVersPlan" type="Button" parent="HBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "O24_TOOLTIP"
text = "O24_VALIDER"

[node name="PorteLignes" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PorteLabels" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="generer_presse" from="HBoxContainer/MarginContainer/ListesBinomes" to="." method="_on_listes_binomes_generer_presse"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/ListesBinomes/GenererBinomes" to="HBoxContainer/MarginContainer/ListesBinomes" method="_on_generer_binomes_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/HBoxContainer/Tracer" to="." method="_on_tracer_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/HBoxContainer/ExporteVersPlan" to="." method="_on_exporte_vers_plan_pressed"]
